--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     --color-primary: #ecf2f8;
 
     --color-accent: #a2d2fb;
-    --color-highlighted: #77bdfb;
+    --color-highlighted: #4d90fa;
 
     --color-warning: #fa7970;
 }
