grayed out existing licenses

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@
 
     --color-accent: #a2d2fb;
     --color-highlighted: #4d90fa;
-
+    --color-existing: #89929b;
     --color-warning: #fa7970;
 }
