made all borders consistent throughout the entire webpage

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
     --color-green: #2dba4e;
     --color-purple: #cea5fb;
 
-    --color-accent: #a2d2fb;
+    --color-accent: #c6cdd5;
     --color-highlighted: #4d90fa;
     --color-existing: #89929b;
     --color-warning: #fa7970;
